istio-test/add-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: add-vs
spec:
  hosts:
  - "add-svc.default.svc.cluster.local"
  http:
  - route:
    - destination:
        host: add-svc
        subset: v1
      weight: 10
    - destination:
        host: add-svc
        subset: v2
      weight: 90
